# routine-music-handler

./: .coveragerc  .pre-commit-config.yaml  README copy.md  README.md  init_project.py  pyproject.toml
.github/workflows/: manual-version-bump.yml  retag-social.yml  run.yml
src/routine_music_handler/: __init__.py  audio_tags.py  drive_ops.py  file_translations.py  filenames.py  main.py  processor.py  retag_from_title.py  sheet_state.py  submission_schema.py
tests/routine_music_handler/: test_filenames.py  test_import_common_utils.py  test_processor.py
